--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "license": "MIT",
   "scripts": {
     "dev": "nodemon",
-    "prebuild": "",
-    "build": "tsc ./src/index.ts",
-    "start": "ts-node --esm --experimental-specifier-resolution=node ./src/index.ts",
+    "build": "tsc",
+    "start": "node ./build/index.mjs",
     "codegen": "graphql-codegen --config ./src/graphql/codegen.ts"
   },
   "devDependencies": {
@@ -15,7 +15,6 @@
     "@graphql-codegen/introspection": "3.0.1",
     "@graphql-codegen/typescript": "^3.0.2",
     "@graphql-codegen/typescript-resolvers": "^3.1.1",
-    "@swc/core": "^1.3.41",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
@@ -24,7 +23,7 @@
     "@types/morgan": "^1.9.4",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^5.0.2"
   },
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
@@ -42,7 +41,6 @@
     "express-graphql": "^0.12.0",
     "graphql": "^16.6.0",
     "graphql-middleware": "^6.1.33",
-    "graphql-playground-middleware-express": "^1.7.23",
     "graphql-scalars": "^1.20.4",
     "graphql-shield": "^7.6.5",
     "helmet": "^6.0.1",
