--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nodemon",
     "build": "tsc",
-    "start": "node ./build/index.mjs",
+    "start": "node ./build/index.js",
     "codegen": "graphql-codegen --config ./src/graphql/codegen.ts"
   },
   "devDependencies": {
@@ -26,6 +26,7 @@
     "typescript": "^5.0.2"
   },
   "dependencies": {
+    "@apollo/server": "^4.5.0",
     "@faker-js/faker": "^7.6.0",
     "@graphql-codegen/typescript-operations": "^3.0.2",
     "@graphql-tools/graphql-file-loader": "^7.5.16",
@@ -39,12 +40,16 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
+    "glob": "^9.3.2",
+    "globby": "^13.1.3",
     "graphql": "^16.6.0",
+    "graphql-import": "^1.0.2",
     "graphql-middleware": "^6.1.33",
     "graphql-scalars": "^1.20.4",
     "graphql-shield": "^7.6.5",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
+    "loadash": "^1.0.0",
     "mongoose": "^7.0.0",
     "mongoose-paginate-v2": "^1.7.1",
     "morgan": "^1.10.0",
